--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -7,7 +7,8 @@ in the Context of Cybersecurity}{}
 % TODO
 \Kurzfassung{
 This is the abstract.
-It fits pretty much on one page and is definitely not longer.}
+It fits pretty much on one page and is definitely not longer.
+}
 
 \newpage
 
@@ -25,6 +26,5 @@ It fits pretty much on one page and is definitely not longer.}
 \newpage
 \input{Talk7/04_final_considerations/04_final_considerations}
 
-\section{Bibliography}
 \bibliography{Talk7/library}
 \bibliographystyle{ieeetr}
