Alphabetical ordering of names

--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -2,7 +2,7 @@
 in the Context of Cybersecurity}
 \markboth{Investigating the Blockchain Technology
 in the Context of Cybersecurity}{}
-\chaptauthors{Lenz, Roland, Pascal, Silas}
+\chaptauthors{Lenz, Pascal, Roland, Silas}
 
 % TODO
 \Kurzfassung{
