fix to many }'s  error, and unknwon character in bibliography

--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -24,7 +24,7 @@ The ability to vote, is the very foundation of every successful democracy and mu
 \begin{enumerate}
 	\item They do not scale very well
 	\item They rely on the procedural security of officials conducting their jobs.
-\end{enumerate}}
+\end{enumerate}
 
 And while various e-Voting systems exist, they all come with multiple security vulnerabilities, that lead to an enourmous risks of election rigging and fraud. 
 The Blockchain on the other hand offers a transparent and incorruptible database that cannot have a single point of failure or be controlled by a single entity. It therefore immediately comes to mind when facing the above stated problems. Meanwhile new questions of privacy and authenticating the writers arise.
