--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -251,7 +251,7 @@ year = {2017}
 @misc{Nielsen2018,
 author = {Nielsen, Robert},
 mendeley-groups = {ComSys Seminar},
-title = {{The Blockchain Is A Solution In Search Of A Problem – Whistling In The Wind}},
+title = {{The Blockchain Is A Solution In Search Of A Problem Whistling In The Wind}},
 url = {https://whistlinginthewind.org/2018/06/13/the-blockchain-is-a-solution-in-search-of-a-problem/},
 urldate = {2019-04-06},
 year = {2018}
