Cleaning the bibliography

--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -5,10 +5,22 @@ in the Context of Cybersecurity}{}
 \chaptauthors{Lenz, Roland, Pascal, Silas}
 
 % TODO
-\Kurzfassung{
-This is the abstract.
-It fits pretty much on one page and is definitely not longer.
-}
+\Kurzfassung{This is the abstract.
+It fits pretty much on one page and is definitely not longer.}
+
+
+
+TODOs:
+Shortening and finalizing till monday
+\begin{enumerate}
+	\item Abstract
+	\item Introduction: 1 - 2 pages --> Roland
+	\item Background all together max 6 pages (2 pages each)
+	\item Related work max 6 pages per chapter
+	\item Conclusion: 2 pages --> Silas
+	\item Abstract --> Lenz
+\end{enumerate}
+
 
 \newpage
 
@@ -26,5 +38,7 @@ It fits pretty much on one page and is definitely not longer.
 \newpage
 \input{Talk7/04_final_considerations/04_final_considerations}
 
-\bibliography{Talk7/library}
+
+\nocite{*}
 \bibliographystyle{ieeetr}
+\bibliography{Talk7/library}
