Adding group Information

--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -12,6 +12,7 @@ It fits pretty much on one page and is definitely not longer.}
 
 TODOs:
 Shortening and finalizing till monday
+Important: CHECK your bibtex entries
 \begin{enumerate}
 	\item Abstract
 	\item Introduction: 1 - 2 pages --> Roland
